Issue 4053 - `svg-icon-maxi` toolbar upload button, hide upload popover when it overlaps content in `svg, image, video-maxi` (#4154)
* Add upload button to `svg-icon-maxi`

* Hide instead of move upload popover

* Improve `isSmall`  calculation algorithm

* Create `getIsSmall` helper, change calculation algo

* `MaxiPopoverButton`: replace `select` with `useSelect`

* `MaxiPopoverButton` `shouldDisplayComponent`

apply hide when overlap feature for `svg-icon-maxi`, `image-maxi` and `video-maxi`

* Show `MaxiPopoverButton` when no content

* Replace `resizerWidth` and `isImage` with `prefix`

* Hide icon, not remove component to make `children` work

* Fix confusion with naming

* Remove useless `useEffect`

--- a/src/blocks/svg-icon-maxi/editor.scss
+++ b/src/blocks/svg-icon-maxi/editor.scss
@@ -54,7 +54,3 @@
 		margin-right: 0;
 	}
 }
-
-body.maxi-blocks--active .maxi-popover-button--small-block {
-	transform: translate(50px, 0px);
-}
